--- a/quickstart-parent/quickstart-ums/pom.xml
+++ b/quickstart-parent/quickstart-ums/pom.xml
@@ -11,9 +11,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<!-- 		<java-version>1.8</java-version> -->
+		<java-version>1.8</java-version>
 		<!-- Override Spring version -->
-<!-- 		<spring.version>4.2.1.RELEASE</spring.version> -->
+		<spring.version>4.2.1.RELEASE</spring.version>
 		<!-- AssertJ is not a part of Spring IO platform, so the version must be provided explicitly -->
 		<assertj-core-version>3.1.0</assertj-core-version>
 	</properties>
