--- a/quickstart-parent/pom.xml
+++ b/quickstart-parent/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>io.spring.platform</groupId>
 		<artifactId>platform-bom</artifactId>
-		<version>1.1.3.RELEASE</version>
+		<version>2.0.0.RELEASE</version>
 	</parent>
 	<modules>
 		<module>quickstart-core</module>
@@ -86,7 +86,11 @@
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
-
+				<plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.2</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
