--- a/quickstart-parent/quickstart-ums/src/main/webapp/WEB-INF/web.xml
+++ b/quickstart-parent/quickstart-ums/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee" 
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+		http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0">
 	<description>User Manager System </description>
 	<display-name>UMS</display-name>
 
@@ -48,5 +49,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-
+	<error-page>
+    	<location>/generalError</location>
+	</error-page>
 </web-app>
