--- a/quickstart-parent/quickstart-ums/src/main/resources/conf/app.properties
+++ b/quickstart-parent/quickstart-ums/src/main/resources/conf/app.properties
@@ -1,4 +1,12 @@
-#jdbc settings
+###########################################################################
+########					ID GENERATOR						  #########
+###########################################################################
+id.workerId=0
+id.datacenterId=0
+
+###########################################################################
+########					JDBC SETTINGS						  #########
+###########################################################################
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/users?useUnicode=yes&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
@@ -8,6 +16,9 @@ jdbc.pool.maxIdle=20
 jdbc.pool.maxActive=20
 jdbc.pool.idleTimeout=60000
 
-#id generator
-id.workerId=0
-id.datacenterId=0
+###########################################################################
+########					MYBATIS CACHE						  #########
+###########################################################################
+#valid value: Redis/Encache/LoggingEhcache
+mybatis.cache.type=LoggingEhcache
+redis.properties.filename=conf/redis/redis.properties
