--- a/quickstart-parent/pom.xml
+++ b/quickstart-parent/pom.xml
@@ -43,6 +43,18 @@
 				<version>${mybatis-spring.version}</version>
 			</dependency>
 			
+			<dependency>
+			    <groupId>org.mybatis.caches</groupId>
+			    <artifactId>mybatis-redis</artifactId>
+			    <version>1.0.0-beta1</version>
+			 </dependency>
+			 
+			 <dependency>
+		    <groupId>org.mybatis.caches</groupId>
+		    <artifactId>mybatis-ehcache</artifactId>
+		    <version>1.0.3</version>
+		</dependency>
+				
 		</dependencies>
 	</dependencyManagement>
 	
