--- a/quickstart-parent/quickstart-ums/pom.xml
+++ b/quickstart-parent/quickstart-ums/pom.xml
@@ -84,10 +84,6 @@
 			<artifactId>javax.el-api</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-		</dependency>
 		<!-- Spring Data -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -177,13 +173,16 @@
 
 		<dependency>
 			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
+			<artifactId>mybatis</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
+			<artifactId>mybatis-spring</artifactId>
 		</dependency>
-		
+		<dependency>
+		    <groupId>org.mybatis.caches</groupId>
+		    <artifactId>mybatis-redis</artifactId>
+		 </dependency>
 		
 		<!-- jdbc -->
 		<dependency>
