--- a/quickstart-parent/quickstart-ums/src/main/resources/conf/app.properties
+++ b/quickstart-parent/quickstart-ums/src/main/resources/conf/app.properties
@@ -22,3 +22,26 @@ jdbc.pool.idleTimeout=60000
 #valid value: Redis/Encache/LoggingEhcache
 mybatis.cache.type=LoggingEhcache
 redis.properties.filename=conf/redis/redis.properties
+
+###########################################################################
+########					DUBBO								  #########
+###########################################################################
+dubbo.application.name=ums
+dubbo.application.owner=longsheng.wang
+dubbo.application.organization=raise
+dubbo.registry.protocol=zookeeper
+dubbo.registry.address=192.168.137.2:2181
+dubbo.registry.dynamic=true
+dubbo.protocol.protocol=dubbo
+dubbo.protocol.port=20815
+dubbo.protocol.dispatcher=all
+dubbo.protocol.threadpool=limited
+dubbo.protocol.threads=300
+dubbo.timeout=60000
+dubbo.check=false
+dubbo.validation=true
+dubbo.executes=500
+dubbo.cluster=failover
+dubbo.retries=0
+dubbo.loadbalance=random
+
