--- a/quickstart-parent/quickstart-ums/pom.xml
+++ b/quickstart-parent/quickstart-ums/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.raise</groupId>
@@ -11,9 +10,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<!-- 		<java-version>1.8</java-version> -->
+		<!-- <java-version>1.8</java-version> -->
 		<!-- Override Spring version -->
-<!-- 		<spring.version>4.2.1.RELEASE</spring.version> -->
+		<!-- <spring.version>4.2.1.RELEASE</spring.version> -->
 		<!-- AssertJ is not a part of Spring IO platform, so the version must be provided explicitly -->
 		<assertj-core-version>3.1.0</assertj-core-version>
 	</properties>
@@ -21,11 +20,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.raise</groupId>
-			<artifactId>quickstart-core</artifactId>
+			<artifactId>quickstart-spi</artifactId>
 		</dependency>
 
 
-<!-- Spring -->
+		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -43,8 +42,7 @@
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring4</artifactId>
-			<!-- Avoid org.hibernate.jpa.boot.archive.spi.ArchiveException: Could 
-				not build ClassFile in Java 8 -->
+			<!-- Avoid org.hibernate.jpa.boot.archive.spi.ArchiveException: Could not build ClassFile in Java 8 -->
 			<exclusions>
 				<exclusion>
 					<artifactId>javassist</artifactId>
@@ -68,8 +66,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<!-- Avoid issue #72 Could not initialize class org.thymeleaf.templateresolver.ServletContextTemplateResolver 
-				due to 'validation is not supported' -->
+			<!-- Avoid issue #72 Could not initialize class org.thymeleaf.templateresolver.ServletContextTemplateResolver due to 'validation is not supported' -->
 			<exclusions>
 				<exclusion>
 					<artifactId>pull-parser</artifactId>
@@ -77,8 +74,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- Avoid: javax.validation.ValidationException: HV000183: Unable to load 
-			'javax.el.ExpressionFactory' -->
+		<!-- Avoid: javax.validation.ValidationException: HV000183: Unable to load 'javax.el.ExpressionFactory' -->
 		<dependency>
 			<groupId>javax.el</groupId>
 			<artifactId>javax.el-api</artifactId>
@@ -180,10 +176,10 @@
 			<artifactId>mybatis-spring</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>org.mybatis.caches</groupId>
-		    <artifactId>mybatis-redis</artifactId>
-		 </dependency>
-		
+			<groupId>org.mybatis.caches</groupId>
+			<artifactId>mybatis-redis</artifactId>
+		</dependency>
+
 		<!-- jdbc -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -191,17 +187,26 @@
 			<scope>runtime</scope>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+		</dependency>
 
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<configuration>
-					<path>/</path>
+					<path>/ums</path>
+					<port>8081</port>
+					<uriEncoding>UTF-8</uriEncoding>
 				</configuration>
 			</plugin>
 			<plugin>
