--- a/quickstart-parent/quickstart-ums/src/main/resources/conf/app.properties
+++ b/quickstart-parent/quickstart-ums/src/main/resources/conf/app.properties
@@ -45,3 +45,15 @@ dubbo.cluster=failover
 dubbo.retries=0
 dubbo.loadbalance=random
 
+
+
+###########################################################################
+########					REDIS								  #########
+###########################################################################
+redis.host=192.168.137.2
+redis.port=6379
+redis.pass=
+redis.maxIdle=300
+redis.maxActive=600
+redis.maxWait=1000
+redis.testOnBorrow=true
