--- a/quickstart-parent/quickstart-web/src/main/webapp/WEB-INF/web.xml
+++ b/quickstart-parent/quickstart-web/src/main/webapp/WEB-INF/web.xml
@@ -46,7 +46,7 @@
 
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/sc/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
 	<error-page>
