--- a/quickstart-parent/quickstart-spi/pom.xml
+++ b/quickstart-parent/quickstart-spi/pom.xml
@@ -12,5 +12,15 @@
   		<groupId>com.raise</groupId>
   		<artifactId>quickstart-core</artifactId>
   	</dependency>
+  	
+ 	<dependency>
+		<groupId>com.alibaba</groupId>
+		<artifactId>dubbo</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>com.101tec</groupId>
+		<artifactId>zkclient</artifactId>
+	</dependency>
+  	
   </dependencies>
 </project>
