--- a/quickstart-parent/quickstart-ums/pom.xml
+++ b/quickstart-parent/quickstart-ums/pom.xml
@@ -6,7 +6,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>quickstart-ums</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -205,7 +205,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<configuration>
 					<path>/ums</path>
-					<port>8081</port>
+					<port>10001</port>
 					<uriEncoding>UTF-8</uriEncoding>
 				</configuration>
 			</plugin>
@@ -221,7 +221,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<warName>project-1-users-1.0</warName>
+					<warName>${project.artifactId}</warName>
 				</configuration>
 			</plugin>
 			<plugin>
